packages/yew-macro/tests/html_macro/node-fail.stderr
error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
 --> tests/html_macro/node-fail.rs:4:21
  |
4 |     html! { "valid" "invalid" };
  |                     ^^^^^^^^^

error: unexpected token, expected `}`
 --> tests/html_macro/node-fail.rs:5:29
  |
5 |     html! { <span>{ "valid" "invalid" }</span> };
  |                             ^^^^^^^^^

error: byte-strings can't be converted to HTML text
                                note: remove the `b` prefix or convert this to a `String`
  --> tests/html_macro/node-fail.rs:11:14
   |
11 |     html! {  b"str" };
   |              ^^^^^^

error: byte-strings can't be converted to HTML text
                                note: remove the `b` prefix or convert this to a `String`
  --> tests/html_macro/node-fail.rs:13:22
   |
13 |     html! {  <span>{ b"str" }</span> };
   |                      ^^^^^^

error[E0425]: cannot find value `invalid` in this scope
 --> tests/html_macro/node-fail.rs:7:13
  |
7 |     html! { invalid };
  |             ^^^^^^^ not found in this scope
  |
help: consider importing one of these items
  |
1 + use core::ptr::invalid;
  |
1 + use std::ptr::invalid;
  |

error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/html_macro/node-fail.rs:6:13
  |
6 |     html! { () };
  |             ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = help: the following other types implement trait `From<T>`:
            <VNode as From<yew::virtual_dom::VComp>>
            <VNode as From<VChild<COMP>>>
            <VNode as From<ChildrenRenderer<VNode>>>
            <VNode as From<yew::virtual_dom::VList>>
            <VNode as From<yew::virtual_dom::VPortal>>
            <VNode as From<yew::virtual_dom::VSuspense>>
            <VNode as From<yew::virtual_dom::VTag>>
            <VNode as From<yew::virtual_dom::VText>>
            <VNode as From<T>>
  = note: required for `()` to implement `ToString`
  = note: required for `VNode` to implement `From<()>`
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> tests/html_macro/node-fail.rs:17:9
   |
17 |         not_node()
   |         ^^^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = help: the following other types implement trait `From<T>`:
             <VNode as From<yew::virtual_dom::VComp>>
             <VNode as From<VChild<COMP>>>
             <VNode as From<ChildrenRenderer<VNode>>>
             <VNode as From<yew::virtual_dom::VList>>
             <VNode as From<yew::virtual_dom::VPortal>>
             <VNode as From<yew::virtual_dom::VSuspense>>
             <VNode as From<yew::virtual_dom::VTag>>
             <VNode as From<yew::virtual_dom::VText>>
             <VNode as From<T>>
   = note: required for `()` to implement `ToString`
   = note: required for `VNode` to implement `From<()>`
   = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
